blurry fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,6 +15,8 @@ html,body {
 	padding: 0;
 	font-size: 3.5em;
 	font-weight: 900;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
 }
 
 /* Home */
